Foreign memory access blueprint